2004-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/lib.am: Remove (Unused).

2004-02-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Don't include lib.am.
	* automake/compile.am: Use automake compilation rules.

2004-02-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libnetworking/pppd/Makefile.am,
	libnetworking/rtems_servers/Makefile.am,
	libnetworking/rtems_telnetd/Makefile.am,
	libnetworking/rtems_webserver/Makefile.am, optman/Makefile.am,
	support/Makefile.am: Don't include lib.am.

2004-02-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libchip/Makefile.am: Don't include lib.am.
	* librdbg/src/i386/Makefile.am,	librdbg/src/m68k/Makefile.am, 
	librdbg/src/powerpc/Makefile.am: Don't include lib.am. Remove
	unnecessary EXTRA_DISTs.

2004-02-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add powerpc's <bsp>/wrapup/Makefile.am detection
	hack.

2004-02-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libnetworking/rtems_webserver/Makefile.am: Add PREINSTALL_DIRS.
	* libnetworking/rtems_telnetd/Makefile.am: Add PREINSTALL_DIRS.
	* libnetworking/rtems_servers/Makefile.am: Add PREINSTALL_DIRS.
	* libnetworking/pppd/Makefile.am: Add PREINSTALL_DIRS.

2004-02-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-multiprocessing.m4: Remove AC_SUBST(HAS_MP).
	Add AM_CONDITIONAL(HAS_MP).
	* wrapup/Makefile.am: Fix path to ../libchip/shmdr.rel.
	* configure.ac: Remove AM_CONDITIONAL(HAS_MP).
	* aclocal/enable-cxx.m4, aclocal/enable-itron.m4,
	aclocal/enable-multiprocessing.m4, aclocal/enable-networking.m4,
	aclocal/enable-posix.m4, aclocal/enable-rdbg.m4,
	aclocal/multilib.m4: Use AS_HELP_STRING instead of AC_HELP_STRING
	(Deprecated by autoconf 2.59).

2004-01-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add AM_CONDITIONAL HAS_WRAPUP_LIBBSP.
	* wrapup/Makefile.am: Add AM_CONDITIONAL HAS_WRAPUP_LIBBSP.

2004-01-23	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
