@@ -46,4 +46,3 @@ pkgconfig_DATA = @host_alias@-@RTEMS_BSP@.pc
 DISTCLEANFILES += @host_alias@-@RTEMS_BSP@.pc
 
 include $(top_srcdir)/automake/subdirs.am
-include $(top_srcdir)/automake/host.am
